--- a/gb/23/9/14/n14074001.md
+++ b/gb/23/9/14/n14074001.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>证人亲述：中共跨国迫害 美大学未积极应对</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/shutterstock_342913091-600x400.jpg" />
 <h6>图为常青藤大学宾夕法尼亚大学。(Shutterstock)
 </h6>
 <hr>
-	<p>【大纪元2023年09月15日讯】（大纪元记者李辰采访报导）在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>校园放映一部《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%81%87%E5%AD%94%E5%AD%90%E4%B9%8B%E5%90%8D.md#1">假孔子之名</a>》的纪录片，却引发70多位中国留学生和校友的联名反对——这是美国宾西法尼亚大学2021年牙医在读博士Emily Huang所始料未及的事情。</p>
-<p>事后，宾州<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>（宾西法尼亚大学，简称宾州大学或宾大）校方第一时间给了CSSA（中国学生学者联合会）的中国留学生为中共谎言污蔑<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>提供了背书的机会，然而，面对Huang的诉求，一个月之内未作任何回应。</p>
-<p>9月11日，法轮大法信息中心举行网络研讨会。与会专家和证人表示，中共对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的迫害延伸到美国大学校园，但一些大学尚未准备好，如何应对。</p>
-<figure id="attachment_14074010" aria-describedby="caption-attachment-14074010" style="width: 793px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14074010-Screen-Shot-2023-09-14-at-5.11.01-PM.png"><img class="size-full wp-image-14074010" src="https://i.epochtimes.com/assets/uploads/2023/09/id14074010-Screen-Shot-2023-09-14-at-5.11.01-PM.png" alt="" width="793" b="380" /></a><figcaption id="caption-attachment-14074010" class="wp-caption-text">9月11日，法轮大法信息中心举行网络研讨会。与会专家和证人表示，中共对法轮功的迫害延伸到美国大学校园，但一些大学尚未准备好，如何应对。图（左）为证人、宾州大学牙医博士Emily Huang在研讨会上。（法轮大法信息中心视频截图）</figcaption></figure>
+	<p>【大纪元2023年09月15日讯】（大纪元记者李辰采访报导）在大学校园放映一部《假孔子之名》的纪录片，却引发70多位中国留学生和校友的联名反对——这是美国宾西法尼亚大学2021年牙医在读博士Emily Huang所始料未及的事情。</p>
+<p>事后，宾州大学（宾西法尼亚大学，简称宾州大学或宾大）校方第一时间给了CSSA（中国学生学者联合会）的中国留学生为中共谎言污蔑法轮功提供了背书的机会，然而，面对Huang的诉求，一个月之内未作任何回应。</p>
+<p>9月11日，法轮大法信息中心举行网络研讨会。与会专家和证人表示，中共对法轮功的迫害延伸到美国大学校园，但一些大学尚未准备好，如何应对。</p>
+<figure id="attachment_14074010" aria-describedby="caption-attachment-14074010" style="width: 793px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14074010-Screen-Shot-2023-09-14-at-5.11.01-PM.png"><img decoding="async" class="size-full wp-image-14074010" src="https://i.epochtimes.com/assets/uploads/2023/09/id14074010-Screen-Shot-2023-09-14-at-5.11.01-PM.png" alt="" width="793" b="380" /></a><figcaption id="caption-attachment-14074010" class="wp-caption-text">9月11日，法轮大法信息中心举行网络研讨会。与会专家和证人表示，中共对法轮功的迫害延伸到美国大学校园，但一些大学尚未准备好，如何应对。图（左）为证人、宾州大学牙医博士Emily Huang在研讨会上。（法轮大法信息中心视频截图）</figcaption></figure>
 <p>Huang2021年是宾州大学法轮大法学生俱乐部的主席。早在2020年11月，她在网上播放电影《寻找勇气》时，宾大的中国留学生和校友抱怨法轮大法俱乐部可以在宾大的通讯邮件中推广活动。</p>
 <p>Huang说，“仅仅因为我们是法轮功学员，不仅仅是活动本身被质疑，连我们作为宾大学生在校园里的权利也被质疑。”</p>
 <p>“法轮功俱乐部是在校园注册的俱乐部，所以，是有权利在通讯邮件中推广活动的。”她说。</p>
-<p>几个月后，宾大法轮大法俱乐部和北美十多个俱乐部一起在网上放映“假孔子为名”的电影纪录片，包括联合“让西藏自由”和Athonite Institute等团体。</p>
+<p>几个月后，宾大法轮大法俱乐部和北美十多个俱乐部一起在网上放映“假孔子为名”的电影纪录片，包括联合“让西藏自由”和Athenai Institute等团体。</p>
 <p>宾州大学获得了孔子学院的合同，但在2009年拒绝了和孔子学院继续合作，这是当时宾大东亚研究系的一致决定。但是，几英里之外的天普大学和孔子学院之间存在合作。</p>
 <p>2021年3月，塔夫茨大学（Tufts University）关闭了孔子学院。而美国国会参议院一致通过一项法案，对全美的孔子学院采取收紧措施。</p>
-<p>那时，Huang和法轮大法俱乐部的其他成员对“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%81%87%E5%AD%94%E5%AD%90%E4%B9%8B%E5%90%8D.md#1">假孔子之名</a>”纪录片的即将放映，感到高兴，并向宾大的教务长、CSSA、天普大学孔子学院院长等发出了邀请。</p>
+<p>那时，Huang和法轮大法俱乐部的其他成员对“假孔子之名”纪录片的即将放映，感到高兴，并向宾大的教务长、CSSA、天普大学孔子学院院长等发出了邀请。</p>
 <p>放映活动先在宾州大学的研究生和专业学生大会（the Graduate and Professional Student Assembly， GAPSA）每周时事通讯中发布，也在他们的社交媒体渠道上发布。</p>
 <p>GAPSA为在大学校园注册的俱乐部提供的另一项为学生活动做广告的服务，在官方社交媒体渠道发布信息。</p>
-<p>但是，CSSA中国留学生成员的负面反应，几乎是汹涌而来。CSSA是由在世界各国大学学习、工作的来自中国大陆的学生学者组成。由上世纪80年代在美的中国留学生发起，并将<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>的监视及强硬介入手段带进美国校园。</p>
+<p>但是，CSSA中国留学生成员的负面反应，几乎是汹涌而来。CSSA是由在世界各国大学学习、工作的来自中国大陆的学生学者组成。由上世纪80年代在美的中国留学生发起，并将<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>的监视及强硬介入手段带进美国校园。</p>
 <p>Huang说，“假孔子之名”的放映活动信息“几乎立即引起的强烈反对，近两个月内评论和电子邮件连续涌入，甚至在活动结束后也是如此”。</p>
 <p>“假孔子之名”以真人真事，讲述了前孔子学院教师、法轮功学员赵琪被派往加拿大麦克马斯特大学孔子学院任教过程中，因不堪忍受孔子学院限制其信仰与言论自由，逃离孔子学院申请难民、并向人权仲裁委员会投诉的故事。</p>
 <p>该片也记录了当地加拿大人在发现孔子学院假借孔子之名，实际在向西方输出共产意识形态的事实之后，发起抗议共同抵制，最终导致第一所孔子学院在西方大学遭到关闭的历史性事件。</p>
@@ -48,45 +48,36 @@
 <p>大纪元记者联络了宾州大学就Emily Huang的经历和以上建议寻求置评，截稿为止未收到回复。</p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/2/29/n11903970.md#1">温哥华放映《假孔子之名》 观众赞引人深思</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/5/18/n12957791.md#1">获奖纪录片《假孔子之名》即将在韩首映</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/27/n14005107.md#1">美逮捕中共特工 法轮功发言人：赞赏 支持</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14007975.md#1">前跨国公司华人高管：中共往德国派大量特务</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/29/n11903970.md#1">温哥华放映《假孔子之名》 观众赞引人深思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/5/18/n12957791.md#1">获奖纪录片《假孔子之名》即将在韩首映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/27/n14005107.md#1">美逮捕中共特工 法轮功发言人：赞赏 支持</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/1/n14007975.md#1">前跨国公司华人高管：中共往德国派大量特务</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/16/n10306820.md#1" target="_blank">【还原史实】 整风运动 魔鬼整人初试啼声</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069176.md#1">【未解之谜】2025年大巨变？深度解读《黄檗禅师诗》（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067845.md#1">【杨延昭传奇】乱世中的命定姻缘（中）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071125.md#1">【人物真相】尹锡悦 坚决抗共的亚洲政治强人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062280.md#1">【古道人生】他找到了银矿发大财却无福消受</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014354.md#1">南朝人的奇幻之旅 进入另外空间 看到了世外高人 知道了前朝秘辛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074054.md#1">【新唐人快报】俄朝关系升级 美对韩售F-35战机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074350.md#1">【晚间新闻】中国多地再现“白肺” 病患骤增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074051.md#1">【时事金扫描】普京陪金正恩玩儿车 密谈了什么</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072494.md#1">王友群：习近平的九个决策错误源自哪里？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072540.md#1">沈舟：中共火箭军的导弹能打习近平吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072481.md#1">【秦鹏观察】习二大将出事？党媒泄末日心态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072404.md#1">邓超被曝罹患忧郁症？孙俪发文泄最新动态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072462.md#1">张钧甯请机上乘客小声 得知对方身份后超尴尬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073251.md#1">王宝强前经纪人宋喆刑满出狱 再引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073240.md#1">刘嘉玲曾自曝有洁癖 友人做客被网民提醒一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072377.md#1">王力宏提婚变一席话惹争议 李靓蕾帖文引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071559.md#1">吃梨一定要吃这部位！抗癌护心防糖尿病 功效强大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068199.md#1">不让近视恶化！每天只花5分钟 改善视力很简单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073027.md#1">木制厨具6大好处 了解后你会爱不释手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072719.md#1">从现代医学看传统美食 豆腐健康吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060271.md#1">西班牙传统甜点：奶油螺旋面包 自己动手做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296328.md#1">青春走一回  儿子，谢谢你教会我这一课！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299288.md#1">【未解之谜】多个预言印证? 2025年有巨变 日台要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296470.md#1">【未解之谜】数千年来无人敢登顶 西藏神山冈仁波齐峰之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279168.md#1">【历史的瞬间】贝隆夫人──她的谎言与美丽，让阿根廷哭泣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294567.md#1">神秘奇观：雷震飞石 奇异预兆应验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299362.md#1">【晚间新闻】巴黎奥运塞纳河开幕 安保规模空前</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299360.md#1">【全球新闻】巴黎奥运惊魂 高铁遇袭瘫痪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299352.md#1">【中国禁闻】贿赂美官员迫害法轮功 两侨领认罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298566.md#1">报告：中共利用军演盗窃西方先进战机技术</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298583.md#1">游客过多 日本餐厅想出一招来应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298682.md#1">大陆一电动汽车自燃 厂家员工到场先撬车标</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297939.md#1">传胡歌获90后妻子陪伴 黄曦宁穿着朴素低调</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298693.md#1">赵丽颖带5岁儿子与父母聚餐 画面温馨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299514.md#1">席琳·迪翁巴黎奥运开幕式献唱《爱的赞歌》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298646.md#1">贝克汉姆夫妇结婚25周年 两人户外恩爱照曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298560.md#1">王兵执导新片入围威尼斯 疑踩红线遭陆网封杀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296813.md#1">超级食物酪梨怎么切 简单4步骤学起来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297898.md#1">这蔬菜让人百吃不厌 专家说多多益善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296131.md#1">大型研究：每日服复合维生素增加死亡风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298289.md#1">为何太空人在太空中避免吃这5种食物？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292077.md#1">牙龈红肿出血又松动？两招自救</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/14/n14074001.htm">证人亲述：中共跨国迫害 美大学未积极应对</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074001.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/14/n14074001.htm">证人亲述：中共跨国迫害 美大学未积极应对</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/14/n14074001.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
